[gd_scene load_steps=2 format=3 uid="uid://ct0u43xjies84"]

[ext_resource type="Script" uid="uid://cnalydjo0ir8r" path="res://blocos/seletor_loop/seletor_loop.gd" id="1_1cqhb"]

[node name="SeletorLoop" type="Control" groups=["input_loop"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1cqhb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 96.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.19607843)

[node name="SpinBox" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 92.0
offset_bottom = 36.0
mouse_filter = 1
min_value = 2.0
max_value = 16.0
value = 5.0
rounded = true

[connection signal="focus_exited" from="ColorRect" to="." method="_on_color_rect_focus_exited"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_color_rect_mouse_exited"]
[connection signal="mouse_exited" from="SpinBox" to="." method="_on_spin_box_mouse_exited"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
